package content.enums;

public enum Difficulty {
    BEGGINER, INTERMEDIATE, ADVANCED
}
