package content.enums;

public enum Genre {
    FICTION, NON_FICTION, BIOGRAPHY, SCIENCE, TECHNOLOGY
}
